templates/Deployment-config-Wp.yml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: wordpress
  namespace: wordp
spec:
  selector:
    app: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          image: 'image-registry.openshift-image-registry.svc:5000/wordp/wordpress'
