templates/Deployment-config-db.yml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: db
  namespace: wordp
spec:
  selector:
    app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: pvo1
          persistentVolumeClaim:
            claimName: claim1
      containers:
        - name: db
          ports:
            - containerPort: 3306
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: pvo1
              mountPath: /var/lib/mysql
          image: 'mysql:5.7'
