templates/Service-db.yml
kind: Service
apiVersion: v1
metadata:
  name: db
  namespace: wordpress
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: db
