templates/Service-wp.yml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  namespace: wordp
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: wordpress
