templates/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  namespace: wordpress
spec:
  path: /
  to:
    kind: Service
    name: wordpress
  port:
    targetPort: 8080
